--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -81,7 +81,7 @@
         },
         {
         "@type": "Article",
-        "name": "Сценарий 5. Глобальный накопитель и Интернет ОС",
+        "name": "Сценарий 5. Глобальный накопитель и Internet OS",
         "articleBody": [
         "Чистые данные, о которых мы уже упоминали в “Сценарий 1. Семантический веб”, позволяют использовать ресурсы миллионов компьютеров в виде единого, огромного, распределенного и общедоступного накопителя. В предыдущем разделе “Сценарий 4. Блокчеин-браузер” мы затронули идею цифровых отпечатках файлов. Возможность получения нужного файла из ближайшего доступного источника является основной идеей проекта Storage. Storage способен стать надежной и дешевой заменой внутреннего накопителя вашего компьютера. Для его использования потребуется лишь интернет и блокчеин-браузер для файловой навигации. Вместо необходимости хранить копию файла на своем жестком диске, вы храните только ссылки на файлы получая их по требованию. Единая файловая система не просто экономить место на жестких дисках, но откроет дорогу к глобальному каталогу музыки, фильмов, книг и прочего, с возможностью новых путей монетизации и бесконечных возможностей для развития shared культуры и crowd творчества."
         ]
