--- a/ru/index.html
+++ b/ru/index.html
@@ -37,9 +37,9 @@
         "name": "WRIO Internet OS",
         "about": "Официальный хаб WRIO OS.",
         "articleBody": [
-        "Данная белая книга рассчитана на широкий круг читателей. Вам не нужно разбираться в тонкостях работы интернета, чтобы понять основные идеи. Однако те читатели, что пожелают вникнуть в технические детали, смогут найти их в разделе “Архитектура WRIO OS”.",
-        "Проект находится в начальной стадии разработки, описанный ниже функционал будет добавляться по мере его развития.",
-        "Просим прощение за множество английских непереведенных названий и терминов. После размышлений было решено оставить их как уже устоявшиеся в обществе либо из-за отсутствия точного аналога, что вносило искажения в восприятии при переводе.",
+        "/* Данная белая книга рассчитана на широкий круг читателей. Вам не нужно разбираться в тонкостях работы интернета, чтобы понять основные идеи. Однако те читатели, что пожелают вникнуть в технические детали, смогут найти их в разделе “Архитектура WRIO OS”. */",
+        "/* Проект находится в начальной стадии разработки, описанный ниже функционал будет добавляться по мере его развития. */",
+        "/* Просим прощение за множество английских непереведенных названий и терминов. После размышлений было решено оставить их как уже устоявшиеся в обществе либо из-за отсутствия точного аналога, что вносило искажения в восприятии при переводе. */",
         "WRIO Internet OS или просто WRIO OS — ваше окно в мир децентрализованного, семантического (ссылка на раздел семантики) и безопасного (ссылка на security) интернета на базе технологии блокчеина (ссылка), с функцией умного помощника (ссылка на IA). Название является акронимом от “webRunes Input/Output Internet Operating System” и подразумевает в дальнейшем полную замену десктопных операционных систем.",
         "На заре появления компьютеров из-за автономности была необходимость в десктопных операционных системах, теперь, в век развития интернета, появилась возможность использовать ресурсы сети, что привело к появлению множества облачных сервисов вроде Dropbox или Netflix. Веб технологии позволяют избавиться от необходимости в установке десктопных программ, но WRIO OS идет еще дальше — создавая и объединяя облачные сервисы, мы приходим к тому, что и сама операционная система больше не нужна. Интернет доступ дает возможность заменить ее одним лишь браузером, что исключает необходимость в мощных процессорах и больших объемах памяти, а широкополостный доступ станет заменой жестким дискам.",
         "Попытки создания веб ОС (web based OS) предпринимались и ранее, однако все они были калькой десктопной ОС, что приводило к созданию системы призванной выполнять облачные задачи через десктоп подход и, как следствие, к провалу.",
@@ -118,57 +118,105 @@
         "mentions": [
         {
         "@type": "Article",
+        "name": "Белая книга",
+        "about": "Официальная документация, содержащая описание проблемы и решения.",
+        "url": "https://ru.wikipedia.org/wiki/Белая_книга?'белая книга':3,10,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Архитектура WRIO OS",
+        "about": "Описание архитектуры проекта.",
+        "url": "#?'Архитектура WRIO OS':3,231"
+        },
+        {
+        "@type": "Article",
+        "name": "Internet OS",
+        "about": "Internet operating system, or Internet OS, is a term used in the computer industry to refer to any type of operating system designed to run all of its applications and services through an Internet client, generally a web browser.",
+        "url": "https://en.wikipedia.org/wiki/Internet_OS?'Internet OS':6,231,external,en"
+        },
+        {
+        "@type": "Article",
+        "name": "Распределённая система",
+        "about": "Для распределённых систем характерно распределение функций, ресурсов между множеством элементов (узлов) и отсутствие единого управляющего центра, поэтому выход из строя одного из узлов не приводит к полной остановке всей системы.",
+        "url": "https://ru.wikipedia.org/wiki/Распределённая_система?'децентрализованного':6,54,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Семантическая паутина",
+        "about": "Это общедоступная глобальная семантическая сеть, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки.",
+        "url": "https://ru.wikipedia.org/wiki/Семантическая_паутина?'семантического':6,75,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Цепочка блоков транзакций",
+        "about": "выстроенная по определённым правилам цепочка из формируемых блоков транзакций. Впервые термин появился как название распределённой базы данных, реализованной в криптовалюте «Биткойн».",
+        "url": "https://ru.wikipedia.org/wiki/Цепочка_блоков_транзакций?'блокчеина':6,133,external"
+        },
+        {
+        "@type": "Article",
+        "name": "IA — индивидуальный помощник",
+        "about": "Описание.",
+        "url": "https://ia.wrioos.com/ru/?'умного помощника':6,155"
+        },
+        {
+        "@type": "Article",
         "name": "Операционная система",
         "about": "Комплекс взаимосвязанных программ, предназначенных для управления ресурсами компьютера и организации взаимодействия с пользователем.",
-        "url": "https://ru.wikipedia.org/wiki/Операционная_система?'десктопных операционных системах':4,70,external"
+        "url": "https://ru.wikipedia.org/wiki/Операционная_система?'десктопных операционных системах':7,70,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Облачные вычисления",
+        "about": "Информационно-технологическая концепция, подразумевающая обеспечение повсеместного и удобного сетевого доступа по требованию к общему пулу (англ. pool) конфигурируемых вычислительных ресурсов (например, сетям передачи данных, серверам, устройствам хранения данных, приложениям и сервисам — как вместе, так и по отдельности), которые могут быть оперативно предоставлены и освобождены с минимальными эксплуатационными затратами или обращениями к провайдеру.",
+        "url": "https://ru.wikipedia.org/wiki/Облачные_вычисления?'десктопных операционных системах':7,221,external"
         },
         {
         "@type": "Article",
         "name": "Сценарий 5. Глобальный накопитель и Internet OS",
-        "about": "Глобальный накопитель как замена сегодняшних жестких дисков.",
-        "url": "#?'жестким дискам':4,671"
-        }
-        ],
-        "image": [
-        {
-        "@type": "ImageObject",
-        "author": "https://aa.wr.io",
-        "contentUrl": "https://wrioos.com/img/standard_browsing.jpg?33,0",
-        "datePublished": "2016-05-30",
-        "description": [
-        "Сегодняшняя типичная схема взаимодействия пользователя с сайтами.",
-        "website 1: браузер пользователя отправляет запрос к сайту и последовательно получает разметку (HTML+UI), стили (CSS) и скрипты (JS) отвечающие за интерактивность взаимодействия. Сервисы зачастую предоставляют третьим сторонам личные данные пользователей.",
-        "website 2: сайты могут быть под контролем мошенников или содержать вредоносный код.",
-        "website 3: вебресурсы могут быть блокированы провадерами."
-        ],
-        "name": "Стандартная интернет-навигация"
+        "about": "Описание.",
+        "url": "https://wrioos.com/ru/#Сценарий_5._Глобальный_накопитель_и_Internet OS?'жестким дискам':7,671"
         },
         {
-        "@type": "ImageObject",
-        "author": "https://aa.wr.io",
-        "contentUrl": "https://wrioos.com/img/semantic_browsing.jpg?33,0",
-        "datePublished": "2016-05-30",
-        "description": [
-        "Семантическая интернет-навигация:",
-        "* нет разделения на сайты и интернет предоставляет собой единую взаимосвязанную семантическую сеть данных",
-        "* данные могут быть зашифрованы и не доступны третьим сторонам и мошенникам",
-        "* текстовая природа данных исключает возможность внедрения вредоносного кода",
-        "* возможность создания собственной ноды позволяет обходить блокировку ресурсов"
-        ],
-        "name": "Семантическая интернет-навигация"
+        "@type": "Article",
+        "name": "Драйвер",
+        "about": "Компьютерное программное обеспечение, с помощью которого другое программное обеспечение (операционная система) получает доступ к аппаратному обеспечению некоторого устройства. Обычно с операционными системами поставляются драйверы для ключевых компонентов аппаратного обеспечения, без которых система не сможет работать. Однако для некоторых устройств (таких, как видеокарта или принтер) могут потребоваться специальные драйверы, обычно предоставляемые производителем устройства.",
+        "url": "https://ru.wikipedia.org/wiki/Драйвер?'драйверов':9,324,external"
         },
         {
-        "@type": "ImageObject",
-        "author": "https://aa.wr.io",
-        "contentUrl": "https://wrioos.com/img/wikipedia.png?49,0",
-        "datePublished": "2016-05-31",
-        "description": "За пример мы взяли статью-заготовку без фотографий",
-        "name": "Википедия"
+        "@type": "Article",
+        "name": "Вредоносная программа",
+        "about": "На жаргоне некоторых специалистов «вирус», англ. malware, malicious software — «злонамеренное программное обеспечение» — любое программное обеспечение, предназначенное для получения несанкционированного доступа к вычислительным ресурсам самой ЭВМ или к информации, хранимой на ЭВМ, с целью несанкционированного использования ресурсов ЭВМ или причинения вреда (нанесения ущерба) владельцу информации, и/или владельцу ЭВМ, и/или владельцу сети ЭВМ, путём копирования, искажения, удаления или подмены информации.",
+        "url": "https://ru.wikipedia.org/wiki/Драйвер?'вредоносными программами':9,520,external"
         },
         {
-        "@type": "ImageObject",
-        "contentUrl": "https://wrioos.com/img/control_of_internet_speech.jpg?54,0",
-        "datePublished": "2016-05-31"
+        "@type": "Article",
+        "name": "Фишинг",
+        "about": "Англ. phishing, от fishing — рыбная ловля, выуживание — вид интернет-мошенничества, целью которого является получение доступа к конфиденциальным данным пользователей — логинам и паролям.",
+        "url": "https://ru.wikipedia.org/wiki/Драйвер?'фишинг':9,961,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Mass surveillance",
+        "about": "Mass surveillance is the intricate surveillance of an entire or a substantial fraction of a population in order to monitor that group of citizens. The surveillance is often carried out by governments or governmental organisations, but may also be carried out by corporations, either on behalf of governments or at their own initiative. Depending on each nation's laws and judicial systems, the legality of and the permission required to engage in mass surveillance varies.",
+        "url": "https://en.wikipedia.org/wiki/Mass_surveillance?'фишинг':9,1334,external,en"
+        },
+        {
+        "@type": "Article",
+        "name": "Nothing to hide argument",
+        "about": "The nothing to hide argument states that government surveillance programs do not threaten privacy unless they uncover illegal activities, and that if they do uncover illegal activities, the person committing these activities does not have the right to keep them private. Hence, a person who favors this argument may state "I've got nothing to hide" and therefore does not express opposition to government surveillance. An individual using this argument may say that a person should not have worries about government or surveillance if he/she has “nothing to hide.”",
+        "url": "https://en.wikipedia.org/wiki/Nothing_to_hide_argument?'потере свободы':9,1485,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Эгоцентричный интернет",
+        "about": "Описание.",
+        "url": "#?'эгоцентричного веба':11,272"
+        },
+        {
+        "@type": "Article",
+        "name": "Isomorphic JavaScript Applications — the Future of the Web?",
+        "about": "One of the best known mottos around the web is Java’s Write once, run everywhere. But does this motto apply to Java only? Can we use it to describe JavaScript too? The answer is Yes.",
+        "url": "http://www.sitepoint.com/isomorphic-javascript-applications/?'изоморфное JavaScript приложение':11,27,external,en"
         }
         ],
         "author": "",
