--- a/ru/блог/index.html
+++ b/ru/блог/index.html
@@ -6,60 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="webRunes">
-    <meta name="keywords" content="Blog">
+    <meta name="keywords" content="Блог">
     <meta name="google-site-verification" content="wW3kG-1bD4IishxXaidLtiLMKNTR3S0MH7Dnd3HpoY8" />
-    <title>Blog</title>
-
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "ItemList",
-        "name": "My cover list for hub",
-        "itemListElement": [
-        {
-        "@type": "ItemList",
-        "name": "Cover",
-        "description": "Info about list",
-        "image": "wrio.s3-website-us-east-1.amazonaws.com/Default-WRIO-Theme/img/no-photo-200x200.png",
-        "url": "webrunes.com/cover.htm?cover"
-        }
-        ]
-        }
-    </script>
-
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "inLanguage": "en",
-        "keywords": "Blog",
-        "name": "Blog",
-        "about": "блог.",
-        "articleBody": [
-        "webRunes (url) a team (url) of freelancers in various IT and other areas of expertize that are developing WRIO Internet OS platform (url). WRIO Internet OS is gate to semantic, decentralized and secure Internet. The platform is required for the technical implementation of the Alternative (url) - a set of projects aimed at the development of a free self-managed society, an alternative approach to the interaction of people with minimal or even without participation of the government (a reference to reducing the role of the state in society). The technical implementation is presented in the form of interconnected services that help people throughout their lives in different area: education, health, communication, finance and others.",
-        "First thoughts about the project emerged in late May 2010, and already on September 20 the first developer started its work. By that time, the initial service concepts were developed, which later became applications of WRIO Internet OS (url).",
-        "Using only own founder’s funds (url), for over four years, we have worked our way up from a bare idea to the first working version, developing several prototypes and making a number of pivots, to eventually find a solid approach to the technical implementation of WRIO OS and answer to the question of the Alternative: ''what projects should be implemented and, more importantly, ''how'', in order to make this world a better place, or at least inspire others to do try''. The idea is not original, but some extra effort on this way is never superfluous. Moreover, it has been decided, what projects are needed to promote of WRIO Internet OS.",
-        "For the future we have more global plans related to the system management by a core based on AI algorithms - IA (Individual Assistant, reverse of AI - artificial intelligence), which will become each user's personal guide to the world of the Internet and will add a variety of extra functions, in particular on the selection of articles, books, music, video and other content. Today, the first version of IA - is just a set of scenarios with a given reaction, but in the future, the system will be much more complex and advanced, as you can read in IA hub (url)."
-        ],
-        "hasPart": [
-        {
-        "@type": "Article",
-        "name": "Раздел",
-        "articleBody": [
-        "Описание."
-        ]
-        },
-        {
-        "@type": "Article",
-        "name": "Раздел 2",
-        "url": "webrunes.com/team.htm"
-        }
-        ],
-        "author": "",
-        "editor": "",
-        "comment": "595986005200613376"
-        }
-    </script>
+    <title>Блог</title>
 
     <script type="application/ld+json">
         {
@@ -71,8 +20,8 @@
         "@type": "ItemList",
         "name": "Blog",
         "description": "Blog - Info about list",
-        "image": "wrio.s3-website-us-east-1.amazonaws.com/Default-WRIO-Theme/img/no-photo-200x200.png",
-        "url": "webrunes.com/blog-list.htm"
+        "image": "https://default.wrioos.com/img/no-photo-200x200.png",
+        "url": "https://wrioos.com/ru/blog/"
         }
         ]
         }
