--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         {
         "@type": "ItemList",
         "name": "Cover",
-        "description": "Info about list",
-        "image": "https://default.wrioos.com/img/no-photo-200x200.png",
+        "description": "WRIO Internet OS cover list",
+        "image": "https://wrioos.com/img/cover1-200x200.jpg",
         "url": "https://wrioos.com/cover/?cover"
         }
         ]
