coming-soon upd

--- a/ru/index.html
+++ b/ru/index.html
@@ -32,7 +32,7 @@
         {
         "@context": "https://schema.org",
         "@type": "Article",
-        "inLanguage": "ru",
+        "inLanguage": "Ru",
         "keywords": "WRIO Internet OS",
         "name": "WRIO Internet OS",
         "about": "Официальный хаб WRIO OS.",
@@ -104,7 +104,7 @@
         "Но на этом проблемы Алисы не заканчились и не меньшим врагом может оказаться тот, кому она платит за услуги — интернет провайдер и государство. В следующем примере Алиса при попытке загрузки website 3 получает ошибку. С ним больше нет связи. Причины могут быть разными, но мы рассмотрим блокировку: IP адрес и/или домен были внесены в блок-лист провайдера по каким-либо причинам (обычно политическим) либо доступ отсекается с помощью DPI. И хотя, зачастую, с помощью прокси-сервера либо VPN доступ по-прежнему можно получить, для этого необходимы определенные знания, которых у Алисы, как обычного пользователя интернета, нет.",
         "К счастью, пока еще не для всех стран актуальна цензура и блокировка, но все больше государств штампует для своих политических целей и защиты большого бизнеса всевозможные антиобщественные законы вроде PIPA и SOPA под различными благовидными причинами.",
         "Как бы то ни было, итог один — свобода слова в интернете становится миражем, а госконтроль, слежка и цензура все усиливаются. Государство всегда будет решать свои проблемы за счет все большего уменьшения свобод граждан, пока мы не станем просто подданными.",
-        "*Что еще почитать?*",
+        "** Что еще почитать? **",
         "* The overweight web: Average web page size is up 15% in 2014"
         ]
         },
@@ -204,13 +204,13 @@
         "@type": "Article",
         "name": "Mass surveillance",
         "about": "Mass surveillance is the intricate surveillance of an entire or a substantial fraction of a population in order to monitor that group of citizens. The surveillance is often carried out by governments or governmental organisations, but may also be carried out by corporations, either on behalf of governments or at their own initiative. Depending on each nation's laws and judicial systems, the legality of and the permission required to engage in mass surveillance varies.",
-        "url": "https://en.wikipedia.org/wiki/Mass_surveillance?'фишинг':9,1334,external,En"
+        "url": "https://en.wikipedia.org/wiki/Mass_surveillance?'передают госструктурам':9,1334,external,En"
         },
         {
         "@type": "Article",
         "name": "Nothing to hide argument",
         "about": "The nothing to hide argument states that government surveillance programs do not threaten privacy unless they uncover illegal activities, and that if they do uncover illegal activities, the person committing these activities does not have the right to keep them private. Hence, a person who favors this argument may state “I've got nothing to hide” and therefore does not express opposition to government surveillance. An individual using this argument may say that a person should not have worries about government or surveillance if he/she has “nothing to hide.”",
-        "url": "https://en.wikipedia.org/wiki/Nothing_to_hide_argument?'потере свободы':9,1485,external"
+        "url": "https://en.wikipedia.org/wiki/Nothing_to_hide_argument?'потере свободы':9,1485,external,En"
         },
         {
         "@type": "Article",
