--- a/index.html
+++ b/index.html
@@ -35,29 +35,17 @@
         "inLanguage": "En",
         "keywords": "WRIO Internet OS",
         "name": "WRIO Internet OS",
-        "about": "Официальный хаб WRIO OS.",
+        "about": "Official WRIO Internet OS hub.",
         "articleBody": [
-        "Текст."
+        "Coming soon."
         ],
         "hasPart": [
         {
         "@type": "Article",
-        "name": "Цели",
+        "name": "Mission",
         "articleBody": [
-        "Мы не просто создаем проекты, которые обладают набором функций - все они взаимосвязаны, дополняют и тем самым усиляют друг друга. Функционал наших проектов разрабатывается таким образом, чтобы в будущем помогать буквально каждому интернет-пользователю. При этом наши продукты работают как для частного, так и для корпоративного сегментов - если пользователь пришел из одного сегмента, то он найдет для себя полезные функции и в другом. Начали мы с предоставления услуг по публикации контента и получению за него донейта, либо фиксированной оплаты. В дальнейшем мы реализуем корпоративные функции позволяющие легко создавать собственные хабы по продаже всевозможного контента: статьи, аудио, видео, книги, уроки, софт, игры, мобильные приложения и многое другое. Но наша цель - создание ядра, умной системы, которая сможет не только подбирать для пользователя контент, а для его авторов - читателей, но создать уникальную услугу личного секретаря, помощника и советчика по всевозможным бытовым и профессиональным вопросам, а главное - помощь в lifelong learning, откуда и вытекает наша цель номер 1 - помогать нашим пользователям в получении достоверной информации, новых знаний и расширении своего кругозора, что отражено в нашем логотипе (ссылка на запись в блоге). Мы верим, что с повышением образования жизнь людей становится лучше для них самих и для общества в целом."
+        "Coming soon."
         ]
-        },
-        {
-        "@type": "Article",
-        "name": "Над чем мы работаем",
-        "articleBody": [
-        "Описание."
-        ]
-        },
-        {
-        "@type": "Article",
-        "name": "Команда",
-        "url": "https://webrunes.com/team/"
         }
         ],
         "mentions": [
@@ -66,45 +54,11 @@
         "name": "WRIO OS",
         "about": "Официальный блог проекта WRIO OS.",
         "url": "https://wr.io/?'WRIO OS':2,107"
-        },
-        {
-        "@type": "Article",
-        "name": "Китайская комната",
-        "about": "Китайская комната — мысленный эксперимент, описанный Джоном Сёрлем, цель которого состоит в опровержении утверждения о том, что цифровая машина, наделённая «искусственным интеллектом» путём её программирования определённым образом, способна обладать сознанием в том же смысле, в котором им обладает человек. По сути, является критикой теста Тьюринга.",
-        "url": "ru.wikipedia.org/wiki/Китайская_комната?'Fusce':5,406"
-        }
-        ],
-        "image": [
-        {
-        "@type": "ImageObject",
-        "author": "Author name",
-        "contentLocation": "Location",
-        "contentUrl": "https://webrunes.com/img/cover1.jpg?5,0",
-        "datePublished": "2016-01-01",
-        "description": "Image description",
-        "name": "Image name"
         }
         ],
         "author": "",
         "editor": "",
         "comment": ""
-        }
-    </script>
-
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "ItemList",
-        "name": "My lists",
-        "itemListElement": [
-        {
-        "@type": "ItemList",
-        "name": "Blog",
-        "description": "Blog - Info about list",
-        "image": "default.wrioos.com/img/no-photo-200x200.png",
-        "url": "wrioos.com/blog/"
-        }
-        ]
         }
     </script>
 </head>
