--- a/ru/index.html
+++ b/ru/index.html
@@ -22,7 +22,7 @@
         "name": "Обложка",
         "description": "Обложки для хаба WRIO Internet OS",
         "image": "https://wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://wrioos.com/cover/?cover"
+        "url": "https://wrioos.com/ru/обложка/?cover"
         }
         ]
         }
@@ -35,7 +35,7 @@
         "inLanguage": "Ru",
         "keywords": "WRIO Internet OS",
         "name": "WRIO Internet OS",
-        "about": "Официальный хаб WRIO OS.",
+        "about": "Ваше окно в мир децентрализованного, семантического и безопасного интернета на базе технологии блокчеина, с функцией умного помощника.",
         "articleBody": [
         "/* Данная белая книга рассчитана на широкий круг читателей. Вам не нужно разбираться в тонкостях работы интернета, чтобы понять основные идеи. Однако те читатели, что пожелают вникнуть в технические детали, смогут найти их в разделе “Архитектура WRIO OS”. */",
         "/* Проект находится в начальной стадии разработки, описанный ниже функционал будет добавляться по мере его развития. */",
