--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -15,7 +15,7 @@
         {
         "@context": "https://schema.org",
         "@type": "Article",
-        "inLanguage": "ru",
+        "inLanguage": "Ru",
         "keywords": "WRIO Internet OS",
         "name": "Сценарии использования",
         "about": "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем.",
@@ -27,25 +27,25 @@
         "@type": "Article",
         "name": "Сценарий 1. Семантический веб",
         "articleBody": [
-        "Прежде чем переходить к технической стороне вопроса, вернемся еще раз к простой конфетной аналогии для описания работы и значения семантики. Снова представим себе, что перед нами стоит очень большой мешок-интернет с коробками конфет. Для того чтобы отсортировать понравившиеся конфеты, придется достать каждую коробку, открыть ее и попробовать каждую из конфет внутри. Сегодняшние сайты — это коробки со страницами-“конфетами”. Зачастую эти коробки плотно обмотаны оберткой с надоедливой рекламой. А чтобы понять, что за информация находится на каждой из страниц, приходится ее открыть и потратить хотя бы несколько секунд чтобы пробежать глазами и понять интересна ли нам представленная информация. Конечно же, невозможно просмотреть все сайты и в большинстве случаев мы пропускаем интересную нам информацию, потребляя наиболее популярную, а значит и распространенную. Такой подход является причиной появления культуры масс, которая, к сожалению, по умолчанию невысокого уровня и замыкает порочный круг — культура масс низкая, а медиа, в погоне за просмотрами, ориентируется на большинство и выпускает примитивный по содержанию, но популярный контент, продолжая удерживать культуру на низком уровне.",
+        "Прежде чем переходить к технической стороне вопроса, вернемся еще раз к простой конфетной аналогии для описания работы и значения семантики. Снова представим себе, что перед нами стоит очень большой мешок с коробками конфет. Для того чтобы отсортировать понравившиеся нам конфеты, придется достать каждую коробку, открыть ее и попробовать каждую из конфет внутри. Сегодняшние сайты — это коробки со страницами-“конфетами”. Зачастую эти коробки плотно обмотаны оберткой с надоедливой рекламой. А чтобы понять, что за информация находится на каждой из страниц, приходится ее открыть и потратить хотя бы несколько секунд чтобы пробежать глазами и понять интересна ли нам представленная информация. Конечно же, невозможно просмотреть все сайты и в большинстве случаев мы пропускаем интересную нам информацию, потребляя наиболее популярную, а значит и распространенную. Такой подход является причиной феномена культуры масс, которая, к сожалению, по умолчанию невысокого уровня и замыкает порочный круг — культура масс низкая, а медиа, в погоне за просмотрами, ориентируется на большинство и выпускает примитивный по содержанию, но популярный контент, продолжая удерживать культуру на низком уровне. Почему это — большая проблема, мы рассмотрим в разделе “Альтернатива. Культура и общественное творчество”.",
         "Семантический веб подразумевает, что вместо огромного мешка коробок с конфетами вы получаете их не только без обертки, но и разложенными по всевозможным признакам: шоколадные, желе, карамельные и т.д. Аналогично и со страницами: вместо ручного поиска нужной информации, система сразу предложит интересные вам статьи не только каталогизированные по типу информации (новости, наука, развлечения, спорт и т.д.), но и ранжированные по качеству исходя именно из ваших предпочтений.",
-        "Теперь добавим немного технических деталей. Теперь на примере Алисы мы рассмотрим несколько сценариев использования WRIO OS. Первый и самый простой: Алиса через поисковик находит и открывает нужный WRIO OS сайт. Такие сайты называются хабами и отличается по структуре от привычных нам сегодня вебстраниц. Вместо смеси разметки и CSS + JavaScript, о которых мы говорили выше, они представляют собой данные разбитые по парам ключ-значение в формате JSON-LD. Весь этот набор страшных слов всего-лишь значит, что если Алиса решит создать страницу с информацией о себе, то она получит страницу с текстом внутри вроде этого:",
+        "Теперь на примере Алисы рассмотрим несколько сценариев использования WRIO OS с некоторыми техническими деталями. Первый и самый простой: Алиса через поисковик находит и открывает нужный WRIO OS сайт. Такие сайты называются хабами и отличается по структуре от привычных нам сегодня вебстраниц. Вместо смеси разметки и CSS + JavaScript, о которых мы говорили выше, они представляют собой данные разбитые по парам ключ-значение в формате JSON-LD. Весь этот набор страшных слов всего-лишь означает, что страница содержит данные в формате:",
         "Name: Alice",
         "Surname: Smith",
         "Born:1 January 1980",
         "Place: Rome",
         "…",
-        "Пример страницы можно увидеть по ссылке https://aa.wr.io/. После открытия страницы нажмите правую кнопку мыши и выберите view source. Внутри вместо привычной каши разметки и текста вы увидите семантические данные разбитые по парам ключ-значение. Благодаря ключам компьютеры способны не просто обработать, но и “понять”, что за информация находится на странице. Это позволяет разработать рекомендательную систему, которая будет наилучшим образом обрабатывать пользовательские запросы. Каждая такая страница содержит внутри минимальную разметку и всего лишь одну ссылку, которой страница связана с одной из WRIO OS нод. Нода — это сервер, который позволяет отобразить такие страницы в удобном пользователю виде. Заметьте, не то как хочет владелец страницы, а то, какой пожелает ее видеть пользователь (ссылка на темы), что снова приводит нас к идее эгоцентричного веба — персонализированный интернет в центре которого находятся ваши интересы.",
+        "Пример страницы можно увидеть по ссылке https://aa.wr.io/ru/. После открытия страницы нажмите правую кнопку мыши и выберите view source. Внутри вместо привычной каши разметки и текста вы увидите семантические данные разбитые по парам ключ-значение. Благодаря ключам компьютеры способны не просто обработать, но и “понять”, что за информация находится на странице. Это позволяет разработать рекомендательную систему, которая будет наилучшим образом обрабатывать пользовательские запросы. Каждая такая страница содержит внутри минимальную разметку и всего лишь одну ссылку, которой страница связана с одной из WRIO OS нод. Нода — это сервер, который позволяет отобразить такие страницы в удобном пользователю виде. Заметьте, не то как хочет владелец страницы, а то, какой пожелает ее видеть пользователь (ссылка на темы), что снова приводит нас к идее эгоцентричного веба — персонализированный интернет в центре которого находятся ваши интересы.",
         "Пока интернет далек от того, чтобы быть семантическим и потому так успешен Google решая проблему поиска. Создание и использование семантических данных не просто эффективно решает проблему, но открывает двери поисковым системам нового поколения с возможностями, которые сегодня многим покажутся фантастическими.",
         "Еще раз, так что же дает нам семантический веб? Сегодняшние сайты — это разрозненные страницы мешанины разметки с другими файлами необходимыми для работы сайта. При этом сайты лишь условно связаны между собой перекрестными ссылками. Информация с таких сайтов трудно поддается автоматической обработке или использованию вне сайта. Семантический веб отличает замена разрозненных сайтов единой децентрализованной глобальной сетью связанных между собой чистых (без лишней разметки и прочего) данных, которые легко поддаются автоматической обработке и могут быть легко использованы любым желающим без ограничений.",
         "Семантическая страница может быть легко создана с помощью WRIO OS редактора или даже простым текстовым редактором и получает следующие преимущества:",
-        "* несмотря на то, что данные по-прежнему могут храниться на разных доменах и серверах как и в случае с обычными сайтами, благодаря унификации переход от одной страницы к другой визуально воспринимается как навигация в пределах одного сайта",
+        "* несмотря на то, что данные по-прежнему могут храниться на разных доменах и серверах как и в случае с обычными сайтами, благодаря унификации пользовательского интерфейса переход от одной страницы к другой визуально воспринимается как навигация в пределах одного сайта",
         "* открытие последующих страниц больше не требует загрузки оболочки, что экономит трафик и существенно уменьшает время отклика",
         "* статическая природа данных позволяет просматривать и работать оффлайн с ранее полученными данными",
-        "* техтовый формат безопасен по умолчанию и не способен причинить вред с определенными оговорками",
+        "* техтовый формат безопасен по умолчанию с определенными оговорками",
         "* ноды WRIO OS могут работать как мост для получения доступа к заблокированным ресурсам. В случае блокировки ноды пользователь может воспользоваться WRIO OS браузером либо поднять собственную ноду",
         "* доступ к зашифрованным данным закрыт для всех кроме пользователя и его доверенных лиц",
-        "Защиту от вирусов (security) и мошенников (WoT) мы детально рассмотрим отдельно."
+        "Защиту от вирусов и мошенников мы детально рассмотрим отдельно."
         ]
         },
         {
@@ -146,9 +146,105 @@
         "mentions": [
         {
         "@type": "Article",
-        "name": "WRIO OS",
-        "about": "Официальный блог проекта WRIO OS.",
-        "url": "https://wr.io/?'WRIO OS':2,107"
+        "name": "Семантическая паутина",
+        "about": "Это общедоступная глобальная семантическая сеть, формируемая на базе Всемирной паутины путём стандартизации представления информации в виде, пригодном для машинной обработки.",
+        "url": "https://ru.wikipedia.org/wiki/Семантический веб?'семантического':3,12,external"
+        },
+        {
+        "@type": "Article",
+        "name": "WRIO Internet OS. Особенности",
+        "about": "Ваше окно в мир децентрализованного, семантического и безопасного интернета на базе технологии блокчеина, с функцией умного помощника.",
+        "url": "https://wrioos.com/ru/#Особенности?'конфетной аналогии':5,80"
+        },
+        {
+        "@type": "Article",
+        "name": "Альтернатива. Культура и общественное творчество",
+        "about": "Описание.",
+        "url": "#?'Альтернатива. Культура и общественное творчество':5,1250"
+        },
+        {
+        "@type": "Article",
+        "name": "Ассоциативный массив",
+        "about": "Абстрактный тип данных (интерфейс к хранилищу данных), позволяющий хранить пары вида «(ключ, значение)» и поддерживающий операции добавления пары, а также поиска и удаления пары по ключу.",
+        "url": "https://ru.wikipedia.org/wiki/Ассоциативный_массив?'парам ключ-значение':7,405,external"
+        },
+        {
+        "@type": "Article",
+        "name": "JSON-LD",
+        "about": "Один из методов передачи связанных данных с использованием текстового формата JSON. Формат имеет целью упростить усилия разработчиков по преобразованию существующих JSON-данных в JSON-LD.",
+        "url": "https://ru.wikipedia.org/wiki/JSON-LD?'JSON-LD':7,435,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Алексей Аншаков",
+        "about": "Личный хаб Алексея Аншакова: основателя webRunes, изобретателя WRIO Internet OS и мечтателя Alternative.",
+        "url": "https://aa.wr.io/ru/?'https://aa.wr.io/ru/':13,40"
+        },
+        {
+        "@type": "Article",
+        "name": "Нода",
+        "about": "Описание.",
+        "url": "#?'Нода':13,618"
+        },
+        {
+        "@type": "Article",
+        "name": "Эгоцентричный веб",
+        "about": "Описание.",
+        "url": "#?'эгоцентричного веба':13,847"
+        },
+        {
+        "@type": "Article",
+        "name": "Поиск",
+        "about": "Описание.",
+        "url": "#?'поисковым системам нового поколения':14,208"
+        },
+        {
+        "@type": "Article",
+        "name": "Core",
+        "about": "Описание.",
+        "url": "https://core.wrioos.com?'WRIO OS редактора':16,58"
+        },
+        {
+        "@type": "Article",
+        "name": "Унификация пользовательского интерфейса",
+        "about": "Описание.",
+        "url": "#?'унификации пользовательского интерфейса':17,131"
+        },
+        {
+        "@type": "Article",
+        "name": "Статический сайт",
+        "about": "Сайт, состоящий из статичных html (htm, dhtml, xhtml) страниц составляющих единое целое. Содержит в себе (в виде HTML-размеченных) текст, изображения, мультимедиа содержимое (аудио, видео) и HTML-теги. Теги бывают как служебные, предназначенные для обозревателя, так и предназначенные для размещения, формирования внешнего вида и отображения информации.",
+        "url": "https://ru.wikipedia.org/wiki/JSON-LD?'статическая природа':19,2,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Безопасность",
+        "about": "Описание.",
+        "url": "#?'определенными оговорками':20,43"
+        },
+        {
+        "@type": "Article",
+        "name": "Прокси-сервер",
+        "about": "Cервер (комплекс программ) в компьютерных сетях, позволяющий клиентам выполнять косвенные запросы к другим сетевым службам. Сначала клиент подключается к прокси-серверу и запрашивает какой-либо ресурс (например, e-mail), расположенный на другом сервере. Затем прокси-сервер либо подключается к указанному серверу и получает ресурс у него, либо возвращает ресурс из собственного кэша (в случаях, если прокси имеет свой кэш). В некоторых случаях запрос клиента или ответ сервера может быть изменён прокси-сервером в определённых целях. Прокси-сервер позволяет защищать компьютер клиента от некоторых сетевых атак и помогает сохранять анонимность клиента.",
+        "url": "https://ru.wikipedia.org/wiki/Прокси-сервер?'мост':21,34,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Блокчеин-браузер",
+        "about": "Описание.",
+        "url": "#'WRIO OS браузером':21,149"
+        },
+        {
+        "@type": "Article",
+        "name": "Нода",
+        "about": "Описание.",
+        "url": "#?'поднять собственную ноду':21,172"
+        },
+        {
+        "@type": "Article",
+        "name": "Безопасность. Ключи",
+        "about": "Описание.",
+        "url": "#?'доступ к зашифрованным данным':22,2"
         }
         ],
         "author": "https://wrioos.com/ru/"
