--- a/cover/index.html
+++ b/cover/index.html
@@ -29,9 +29,7 @@
         "@type": "Article",
         "name": "Name",
         "about": "About.",
-        "url": "#?'текст':3,2,external,En"
-        }
-        ]
+        "url": "#?'text':1,38"
         }
         ]
         }
