--- a/ru/обложка/index.html
+++ b/ru/обложка/index.html
@@ -29,9 +29,7 @@
         "@type": "Article",
         "name": "Название",
         "about": "Описание.",
-        "url": "#?'текст':3,2,external,En"
-        }
-        ]
+        "url": "#?'текст':3,2"
         }
         ]
         }
