Move to webpack

--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
     </script>
 </head>
 <body>
-    <script type="text/javascript" src="//wrioos.com/start.js"></script>
+    <script type="text/javascript" src="WRIO-InternetOS/start.js"></script>
 </body>
 </html>
