--- a/ru/блог/index.html
+++ b/ru/блог/index.html
@@ -13,20 +13,28 @@
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
-        "@type": "ItemList",
-        "name": "My lists",
-        "itemListElement": [
+        "@type": "Article",
+        "inLanguage": "Ru",
+        "keywords": "Блог",
+        "name": "Блог",
+        "about": "В разработке.",
+        "articleBody": [
+        "В разработке."
+        ],
+        "hasPart": [
         {
-        "@type": "ItemList",
-        "name": "Blog",
-        "description": "Blog - Info about list",
-        "image": "https://default.wrioos.com/img/no-photo-200x200.png",
-        "url": "https://wrioos.com/ru/blog/"
-        }
+        "@type": "Article",
+        "name": "Заголовок",
+        "articleBody": [
+        "В разработке."
         ]
         }
+        ],
+        "author": "",
+        "editor": "",
+        "comment": "595986005200613376"
+        }
     </script>
-
 </head>
 <body>
     <script type="text/javascript" src="https://wrioos.com/start.js"></script>
